--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <p>This is where organizations or individuals provide prompts about data science and sponsor competitions on our platform with prizes. Data scientists in our community participate in competitions to create the best solutions to these prompts.</p>
                 </div>
                 <div class="card__footer">
-                    <a class="btn" href="">Participate Now</a>
+                    <a class="btn" href="https://bitgrit.net/" target="_blank">Participate Now</a>
                 </div>
             </div>
             <div class="card bg-purple-3 text-white">
@@ -113,7 +113,7 @@
                     <p>We match data science talent with global and domestic companies in Japan, including customizable headhunting services from our own competition platform and across industries. Clients have the opportunity to hire winners in our AI competitions to deploy or refine their solution.</p>
                 </div>
                 <div class="card__footer">
-                    <a class="btn" href="">Apply Now</a>
+                    <a class="btn" href="https://bitgrit.net/jobs/" target="_blank">Apply Now</a>
                 </div>
             </div>
             <div class="card bg-purple-4 text-white">
@@ -122,7 +122,7 @@
                     <p>We envision a platform where anyone can sell and purchase access to data and AI algorithms built from that data sourced from our bitgrit community. Once developed, the best solutions from competitions will be posted on the Marketplace.</p>
                 </div>
                 <div class="card__footer">
-                    <a class="btn" href="">Read more</a>
+                    <a class="btn" href="" target="_blank">Read more</a>
                 </div>
             </div>
         </section>
@@ -134,7 +134,7 @@
                     <div class="column small">
                         <div class="media">
                             <div class="media__icon">
-                                <svg><use xlink:href="#icon-close"/></svg>
+                                <img src="assets/icon ecosystem.png" alt="icon">
                             </div>
                             <div class="media__body">
                                 <h3 class="small">Token Ecosystem</h3>
@@ -145,7 +145,7 @@
                     <div class="column small">
                         <div class="media">
                             <div class="media__icon">
-                                <svg><use xlink:href="#icon-close"/></svg>
+                                <img src="assets/icon significance.png" alt="icon">
                             </div>
                             <div class="media__body">
                                 <h3 class="small">Token Significance</h3>
@@ -397,6 +397,113 @@
             </div>
         </section>
 
+        <section class="bg-purple-2">
+            <div class="container carousel-wrapper">
+                <div class="row">
+                    <div class="column text-center">
+                        <h2 class="text-white">Our Team</h2>
+                    </div>
+                </div>
+                <div class="row carousel carousel--team">
+                    <div class="column">
+                        <img class="carousel--team-img" src="assets/team/tetsuro.jpg" alt="team">
+                        <h3 class="carousel--team-name text-white">Tetsuro Masunaga</h3>
+                        <p class="carousel--team-title text-white">CEO & Co-founder</p>
+                        <a class="btn mb3" href="https://www.linkedin.com/in/tetsuro-masunaga-12370b62/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
+
+                        <img class="carousel--team-img" src="assets/team/yuria.jpg" alt="team">
+                        <h3 class="carousel--team-name text-white">Yuria Kondo</h3>
+                        <p class="carousel--team-title text-white">Business Development / Sales Manager</p>
+                        <a class="btn" href="https://www.linkedin.com/in/yuria-kondo/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
+                    </div>
+                    <div class="column">
+                        <img class="carousel--team-img" src="assets/team/kazuya.jpg" alt="team">
+                        <h3 class="carousel--team-name text-white">Kazuya Saginawa</h3>
+                        <p class="carousel--team-title text-white">Director & Co-founder</p>
+                        <a class="btn mb3" href="https://www.linkedin.com/in/kazuya-saginawa/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
+
+                        <img class="carousel--team-img" src="assets/team/deepali.jpg" alt="team">
+                        <h3 class="carousel--team-name text-white">Deepali Varshney</h3>
+                        <p class="carousel--team-title text-white">Technical Project Manager</p>
+                        <a class="btn" href="https://www.linkedin.com/in/deepalivarshney/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
+                    </div>
+                    <div class="column">
+                        <img class="carousel--team-img" src="assets/team/ashish.jpg" alt="team">
+                        <h3 class="carousel--team-name text-white">Ashish Malhotra</h3>
+                        <p class="carousel--team-title text-white">Director</p>
+                        <a class="btn mb3" href="https://www.linkedin.com/in/ashish-malhotra-2609344/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
+
+                        <img class="carousel--team-img" src="assets/team/john.jpg" alt="team">
+                        <h3 class="carousel--team-name text-white">John Keyser</h3>
+                        <p class="carousel--team-title text-white">Recruiting Manager</p>
+                        <a class="btn" href="https://www.linkedin.com/in/john-b-keyser-b63911161/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
+                    </div>
+                    <div class="column">
+                        <img class="carousel--team-img" src="assets/team/gautam.jpg" alt="team">
+                        <h3 class="carousel--team-name text-white">Gautam Bajaj</h3>
+                        <p class="carousel--team-title text-white">Technical Architech</p>
+                        <a class="btn mb3" href="https://www.linkedin.com/in/d34th4ck3r/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
+
+                        <img class="carousel--team-img" src="assets/team/kelly.jpg" alt="team">
+                        <h3 class="carousel--team-name text-white">Kelly Martin</h3>
+                        <p class="carousel--team-title text-white">Digital Marketing Manager</p>
+                        <a class="btn" href="https://www.linkedin.com/in/kj-martin/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
+                    </div>
+                    <div class="column">
+                        <img class="carousel--team-img" src="assets/team/mukta.jpg" alt="team">
+                        <h3 class="carousel--team-name text-white">Mukta Arora</h3>
+                        <p class="carousel--team-title text-white">Sales Lead</p>
+                        <a class="btn mb3" href="https://www.linkedin.com/in/muktaarora/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
+
+                        <img class="carousel--team-img" src="assets/team/sarfraz.jpg" alt="team">
+                        <h3 class="carousel--team-name text-white">Sarfraz Petkar</h3>
+                        <p class="carousel--team-title text-white">Community Manager</p>
+                        <a class="btn" href="https://www.linkedin.com/in/sarfraz-petkar-7b59297b/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
+                    </div>
+                </div>
+                <svg id="team-previous" class="previous carousel__arrow carousel__arrow--white"><use xlink:href="#icon-arrow-left"/></svg>
+                <svg id="team-next" class="next carousel__arrow carousel__arrow--white"><use xlink:href="#icon-arrow-right"/></svg>
+            </div>
+        </section>
+
+        <section class="bg-purple-2">
+            <div class="container carousel-wrapper">
+                <div class="row">
+                    <div class="column text-center">
+                        <h2 class="text-white">Advisors</h2>
+                    </div>
+                </div>
+                <div class="row carousel carousel--advisors">
+                    <div class="column">
+                        <img class="carousel--advisors-img" src="assets/team/tetsuro.jpeg" alt="advisors">
+                        <h3 class="carousel--advisors-name text-white">Tetsuro Masunaga</h3>
+                        <p class="carousel--advisors-title text-white">CEO & Co-Founder</p>
+                        <a class="btn" href="https://www.linkedin.com/in/tetsuro-masunaga-12370b62/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
+                    </div>
+                    <div class="column">
+                        <img class="carousel--advisors-img" src="assets/team/tetsuro.jpeg" alt="advisors">
+                        <h3 class="carousel--advisors-name text-white">Tetsuro Masunaga</h3>
+                        <p class="carousel--advisors-title text-white">CEO & Co-Founder</p>
+                        <a class="btn" href="https://www.linkedin.com/in/tetsuro-masunaga-12370b62/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
+                    </div>
+                    <div class="column">
+                        <img class="carousel--advisors-img" src="assets/team/tetsuro.jpeg" alt="advisors">
+                        <h3 class="carousel--advisors-name text-white">Tetsuro Masunaga</h3>
+                        <p class="carousel--advisors-title text-white">CEO & Co-Founder</p>
+                        <a class="btn" href="https://www.linkedin.com/in/tetsuro-masunaga-12370b62/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
+                    </div>
+                    <div class="column">
+                        <img class="carousel--advisors-img" src="assets/team/tetsuro.jpeg" alt="advisors">
+                        <h3 class="carousel--advisors-name text-white">Tetsuro Masunaga</h3>
+                        <p class="carousel--advisors-title text-white">CEO & Co-Founder</p>
+                        <a class="btn" href="https://www.linkedin.com/in/tetsuro-masunaga-12370b62/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
+                    </div>
+                </div>
+                <svg id="advisors-previous" class="previous carousel__arrow carousel__arrow--white"><use xlink:href="#icon-arrow-left"/></svg>
+                <svg id="advisors-next" class="next carousel__arrow carousel__arrow--white"><use xlink:href="#icon-arrow-right"/></svg>
+            </div>
+        </section>
+
         <section>
             <div class="container carousel-wrapper">
                 <div class="row">
@@ -423,6 +530,21 @@
                 </div>
                 <svg id="partners-previous" class="previous carousel__arrow"><use xlink:href="#icon-arrow-left"/></svg>
                 <svg id="partners-next" class="next carousel__arrow"><use xlink:href="#icon-arrow-right"/></svg>
+            </div>
+        </section>
+
+        <section class="bg-purple-1">
+            <div class="carousel-wrapper">
+                <div class="row">
+                    <div class="column text-center">
+                        <h2 class="text-white">Blog</h2>
+                    </div>
+                </div>
+                <div class="row carousel carousel--blog">
+
+                </div>
+                <svg id="blog-previous" class="previous carousel__arrow carousel__arrow--white"><use xlink:href="#icon-arrow-left"/></svg>
+                <svg id="blog-next" class="next carousel__arrow carousel__arrow--white"><use xlink:href="#icon-arrow-right"/></svg>
             </div>
         </section>
 
@@ -532,6 +654,7 @@
         <script src="javascript/lib/highcharts.js"></script>
         <script src="javascript/plugins/slick.min.js"></script>
         <script src="javascript/components/navigation.js"></script>
+        <script src="javascript/components/blog.js"></script>
         <script src="javascript/components/carousel.js"></script>
         <script src="javascript/components/charts.js"></script>
 
